[package]
name = "cloudflare-dyndns"
version = "0.1.0"
edition = "2021"
authors = ["Mykhailo Bilyi"]

[dependencies]
cargo-deb = "2.12.1"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.19", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
toml = "0.8.22"
warp = "0.3.7"

# Nice example of a rust project that uses the cargo-deb
# https://github.com/NLnetLabs/krill/tree/main
# Official repo of cargo-deb
# https://github.com/kornelski/cargo-deb/blob/main/systemd.md
[package.metadata.deb]
maintainer-scripts = "pkg/debian/"
systemd-units = { enable = true }
assets = [
  ["target/release/cloudflare-dyndns", "usr/bin/", "755"],
  ["defaults/config.toml", "/etc/cloudflare-dyndns/config.toml", "644"]
]
